made the last modonomicon category look better + fixed a few typos + changed lang strings + fixed tooltip image

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -196,9 +196,9 @@
   "book.forgero.guidebook.getting_started.your_first_tool.text1": "Here is a small reminder for the crafting recipe. \n\\\n\\\nNow you will never forget it! (right?)",
   "book.forgero.guidebook.getting_started.shortcut.name": "Onto Schematics!",
   "book.forgero.guidebook.getting_started.shortcut.description": "Stone age & Beyond",
-  "book.forgero.guidebook.category.schematics.name": "Schematics & Co",
+  "book.forgero.guidebook.category.schematics.name": "Schematics & Co.",
   "book.forgero.guidebook.schematics.back_to_crafting.name": "Back To The Basics!",
-  "book.forgero.guidebook.schematics.back_to_crafting.description": "Already forgot again?",
+  "book.forgero.guidebook.schematics.back_to_crafting.description": "Need a refresher?",
   "book.forgero.guidebook.schematics.schematics.name": "Schematics",
   "book.forgero.guidebook.schematics.schematics.description": "A different approach",
   "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](37bf00)schematics[#](). Luckily the base ones can be crafted pretty easily. \n\\\n\\\nCreate new wooden parts or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
@@ -238,7 +238,7 @@
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](37bf00)schematics[#]() you can find these by exploring the world. \n\\\n\\\nThese [#](37bf00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
   "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
-  "book.forgero.guidebook.schematics.shortcut.description": "Finally I can dye my tools pink!",
+  "book.forgero.guidebook.schematics.shortcut.description": "Get your swag on",
   "book.forgero.guidebook.category.upgrading.name": "Customization & Upgrades",
   "book.forgero.guidebook.upgrading.upgrade_station.name": "From Pickaxe To Powerhouse",
   "book.forgero.guidebook.upgrading.upgrade_station.description": "The Upgrade Station and you",
@@ -256,7 +256,7 @@
   "book.forgero.guidebook.upgrading.weight.title": "Weight & Attack Speed",
   "book.forgero.guidebook.upgrading.weight.text": "Weight and Attack speed are a bit of a outlier if you look at the stats. \n\\\n\\\nAs base every material in Forgero has 2 attack speed, the weight on the material then decides how much there is taken off.",
   "book.forgero.guidebook.upgrading.weight.title1": "Hunger",
-  "book.forgero.guidebook.upgrading.weight.text1": "Next to attack speed weight also has a impact on your hunger bar. \n\\\n\\\nHow heavier the tool how more you have to eat to get replenished.",
+  "book.forgero.guidebook.upgrading.weight.text1": "Next to attack speed weight also has a impact on your hunger bar. \n\\\n\\\nThe tools weight determines how more you have to eat to replenish your hunger.",
   "book.forgero.guidebook.upgrading.slots.name": "Tools And Their Slots",
   "book.forgero.guidebook.upgrading.slots.description": "You can always have more",
   "book.forgero.guidebook.upgrading.slots.text": "[#](000CFF)Tools[#]() have different [#](FF00C5)slots[#](). Which have all their own benefit. Not all materials are viable in every slot. \n\\\n\\\nThink about it, would it make sense to add vines to the tip of your sword?",
@@ -269,18 +269,20 @@
   "book.forgero.guidebook.upgrading.utility.title": "Utility",
   "book.forgero.guidebook.upgrading.utility.text1": "Next to just upgrades and materials, these [#](FF00C5)slots[#]() could also house a binding or dyes to customize your [#](000CFF)tool[#]().",
   "book.forgero.guidebook.upgrading.utility.title1": "Other Slots",
-  "book.forgero.guidebook.upgrading.binding.name": "Bindings",
-  "book.forgero.guidebook.upgrading.binding.description": "Keep your tools together",
+  "book.forgero.guidebook.upgrading.binding.name": "Bindings and Pommels",
+  "book.forgero.guidebook.upgrading.binding.description": "A balancing act",
   "book.forgero.guidebook.upgrading.binding.text": "Bindings are parts you add to your [#](000CFF)tool[#]() adding durability, speed and maybe even some trinkets down the line. ",
   "book.forgero.guidebook.upgrading.binding.title": "Bindings",
   "book.forgero.guidebook.upgrading.binding.text1": "There are different types of Bindings. Soft bindings are lighter, and made with less durable material while normal bindings are heavy but more durable.",
   "book.forgero.guidebook.upgrading.binding.title1": "Different Bindings",
+  "book.forgero.guidebook.upgrading.pommel.text": "Just like Bindings, Pommels are a part upgrade adding durability in exchange for weight. ",
+  "book.forgero.guidebook.upgrading.pommel.title": "Pommels",
   "book.forgero.guidebook.upgrading.grip.name": "Handle Grip",
   "book.forgero.guidebook.upgrading.grip.description": "Get a grip",
   "book.forgero.guidebook.upgrading.grip.text": "The Handle grip gives a small bit of durability to your [#](000CFF)tool[#](), some materials also gives some mining speed and attack speed when used in this [#](FF00C5)slot[#]()  ",
   "book.forgero.guidebook.upgrading.grip.title": "Grip",
   "book.forgero.guidebook.upgrading.cosmetic.name": "Dyes",
-  "book.forgero.guidebook.upgrading.cosmetic.description": "Make your tool stand out!",
+  "book.forgero.guidebook.upgrading.cosmetic.description": "Finally, pink tools",
   "book.forgero.guidebook.upgrading.cosmetic.text": "Dyes don't add any stats and are fully visual. Think of them as a [#](000CFF)tool[#]() skin in other games. Other upgrades on the tool will always override dyes so keep that in mind.",
   "book.forgero.guidebook.upgrading.cosmetic.title": "Dyes",
   "book.forgero.guidebook.upgrading.trinket.name": "Trinket Slots",
@@ -288,7 +290,7 @@
   "book.forgero.guidebook.upgrading.trinket.text": "Trinkets exist (currently) only out of gems and can only be added to bindings and guards.",
   "book.forgero.guidebook.upgrading.trinket.title": "Trinkets",
   "book.forgero.guidebook.upgrading.gems.name": "Gems",
-  "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration",
+  "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration!",
   "book.forgero.guidebook.upgrading.gems.text": "Gems add base stats to a [#](000CFF)tool[#](). For every base stat there is one gem that amplifies it. \n\\\n\\\nGems are based on minerals, so for example diamond gem or a lapis lazuli gem.",
   "book.forgero.guidebook.upgrading.gems.title": "Gems",
   "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining their respective ore. \n\\\n\\\nGems can be upgraded to level 5. Each level increases the bonus amount. Each level requires some unique items.",
@@ -303,10 +305,6 @@
   "book.forgero.guidebook.upgrading.reinforcement.title": "Reinforcements",
   "book.forgero.guidebook.upgrading.reinforcement.text1": "With the right reinforcement you can add multiple mining levels or alot of mining speed to your very weak [#](000CFF)tool[#](). There isn't one thing the best so try them all! ",
   "book.forgero.guidebook.upgrading.reinforcement.title1": "What does it add?",
-  "book.forgero.guidebook.upgrading.pommel.name": "Pommels",
-  "book.forgero.guidebook.upgrading.pommel.description": "Pommeled It!",
-  "book.forgero.guidebook.upgrading.pommel.text": "Just like Bindings, Pommels are a part upgrade adding durability in exchange for weight. ",
-  "book.forgero.guidebook.upgrading.pommel.title": "Pommels",
-  "book.forgero.guidebook.upgrading.back_to_schematics.name": "Did you screw up?",
-  "book.forgero.guidebook.upgrading.back_to_schematics.description": "Surely not right?"
+  "book.forgero.guidebook.upgrading.back_to_schematics.name": "Back to schematics!",
+  "book.forgero.guidebook.upgrading.back_to_schematics.description": "Time for a redo?"
 }
