Alot of improvements by Temathy And some small text fixes

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -224,7 +224,7 @@
   "book.forgero.guidebook.schematics.refined_schematics.title": "Refined Schematics",
   "book.forgero.guidebook.schematics.refined_schematics.text": "[#](37bf00)Refined schematics[#]() are a upgrade over the normal [#](37bf00)schematics[#](). \n\\\n\\\nThese [#](37bf00)schematics[#]() don't have any special abilities, but they have slightly better stats than regular tools. ",
   "book.forgero.guidebook.schematics.refined_schematics.title1": "How to get them",
-  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](37bf00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or be being boring and trade your way there. (-Joris)",
+  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](37bf00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring and trade your way there. \n\\\n\\\n~JorisdeBeer, 2024",
   "book.forgero.guidebook.schematics.extended_schematics.name": "Extended Schematics",
   "book.forgero.guidebook.schematics.extended_schematics.description": "Extended = Unique",
   "book.forgero.guidebook.schematics.extended_schematics.title": "Extended Schematics",
@@ -265,18 +265,16 @@
   "book.forgero.guidebook.upgrading.slots.title1": "Different Slots",
   "book.forgero.guidebook.upgrading.utility.name": "Utility Slots",
   "book.forgero.guidebook.upgrading.utility.description": "Sneaky upgrades",
-  "book.forgero.guidebook.upgrading.utility.text": "[#](FF00C5)Utility slots[#]() are almost always filled by soft materials. Think of leather, vines, certain mob drops.  ",
+  "book.forgero.guidebook.upgrading.utility.text": "[#](FF00C5)Utility slots[#]() are almost always filled by soft materials. Think of leather, vines and certain mob drops.  ",
   "book.forgero.guidebook.upgrading.utility.title": "Utility",
   "book.forgero.guidebook.upgrading.utility.text1": "Next to just upgrades and materials, these [#](FF00C5)slots[#]() could also house a binding or dyes to customize your [#](000CFF)tool[#]().",
   "book.forgero.guidebook.upgrading.utility.title1": "Other Slots",
   "book.forgero.guidebook.upgrading.binding.name": "Bindings and Pommels",
   "book.forgero.guidebook.upgrading.binding.description": "A balancing act",
-  "book.forgero.guidebook.upgrading.binding.text": "Bindings are parts you add to your [#](000CFF)tool[#]() adding durability, speed and maybe even some trinkets down the line. ",
+  "book.forgero.guidebook.upgrading.binding.text": "Bindings are parts you add to your [#](000CFF)tool[#]() adding durability, speed and maybe even some trinkets down the line.\n\\\n\\\nThere are different types of Bindings. Soft bindings are lighter, and made with less durable material while normal bindings are heavy but more durable.",
   "book.forgero.guidebook.upgrading.binding.title": "Bindings",
-  "book.forgero.guidebook.upgrading.binding.text1": "There are different types of Bindings. Soft bindings are lighter, and made with less durable material while normal bindings are heavy but more durable.",
-  "book.forgero.guidebook.upgrading.binding.title1": "Different Bindings",
-  "book.forgero.guidebook.upgrading.pommel.text": "Just like bindings, pommels are a part upgrade adding durability in exchange for weight. ",
-  "book.forgero.guidebook.upgrading.pommel.title": "Pommels",
+  "book.forgero.guidebook.upgrading.binding.text1": "Just like bindings, pommels are a part upgrade adding durability in exchange for weight. ",
+  "book.forgero.guidebook.upgrading.binding.title1": "Pommels",
   "book.forgero.guidebook.upgrading.grip.name": "Handle Grip",
   "book.forgero.guidebook.upgrading.grip.description": "Get a grip",
   "book.forgero.guidebook.upgrading.grip.text": "The handle grip gives a small bit of durability to your [#](000CFF)tool[#](), and some materials also give stat increases such as additional mining speed or attack speed when used in this [#](FF00C5)slot[#]().",
@@ -291,9 +289,9 @@
   "book.forgero.guidebook.upgrading.trinket.title": "Trinkets",
   "book.forgero.guidebook.upgrading.gems.name": "Gems",
   "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration!",
-  "book.forgero.guidebook.upgrading.gems.text": "Gems add base stats to a [#](000CFF)tool[#](). For every base stat there is, you have one type of gem that amplifies it. \n\\\n\\\nGems are based on minerals, so for example a diamond gem or a lapis lazuli gem.",
+  "book.forgero.guidebook.upgrading.gems.text": "Gems add additional base stats to a [#](000CFF)tool[#](). For every stat there is, you have one type of gem that amplifies it. \n\\\n\\\nGems are based on minerals. So for example we have diamond gems, but also lapiz lazuli gems.",
   "book.forgero.guidebook.upgrading.gems.title": "Gems",
-  "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining their respective ore. \n\\\n\\\nGems can be upgraded to level 5, and each level increases the increase it gives. Each level also requires some unique items to be upgraded further.",
+  "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining. \n\\\n\\\nGems can be upgraded to level 5, and each level increases the modifier it gives. To upgrade you will need to gather some unique materials.",
   "book.forgero.guidebook.upgrading.gems.title1": "Where to find these",
   "book.forgero.guidebook.upgrading.offensive.name": "Offensive Slots",
   "book.forgero.guidebook.upgrading.offensive.description": "Harder, better, faster, stronger",
@@ -301,9 +299,9 @@
   "book.forgero.guidebook.upgrading.offensive.title": "Offensive slots",
   "book.forgero.guidebook.upgrading.reinforcement.name": "Reinforcements",
   "book.forgero.guidebook.upgrading.reinforcement.description": "Have your tool outlive you",
-  "book.forgero.guidebook.upgrading.reinforcement.text": "Reinforcements are the backbone of a [#](000CFF)tool[#](). Want your wooden [#](000CFF)tool[#]() to mine diamonds? No? Well you can do that anyways with a bit of netherite!",
+  "book.forgero.guidebook.upgrading.reinforcement.text": "Reinforcements are the backbone of a [#](000CFF)tool[#](). \n\\\n\\\nWant your wooden [#](000CFF)tool[#]() to mine diamonds? No? Well you can do that anyways with a bit of netherite!",
   "book.forgero.guidebook.upgrading.reinforcement.title": "Reinforcements",
-  "book.forgero.guidebook.upgrading.reinforcement.text1": "With the right reinforcements you can add multiple mining levels or increase the mining speed of your [#](000CFF)tool[#](). There is no correct or incorrect combination so it's best to try what works out for you!",
+  "book.forgero.guidebook.upgrading.reinforcement.text1": "With the right reinforcements you can add multiple mining levels or increase the mining speed of your [#](000CFF)tool[#](). \n\\\n\\\nThere is no correct or incorrect combination so it's best to try what works out for you!",
   "book.forgero.guidebook.upgrading.reinforcement.title1": "What does it add?",
   "book.forgero.guidebook.upgrading.back_to_schematics.name": "Back to schematics!",
   "book.forgero.guidebook.upgrading.back_to_schematics.description": "Time for a redo?"
