Create: Garnished en_us.json added.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -243,5 +243,53 @@
   "item.forgero.netherite_gold_ingot": "Netherite-Gold Ingot",
   "item.forgero.netherite_emerald_ingot": "Netherite-Emerald Ingot",
   "item.forgero.netherite_diamond_ingot": "Netherite-Diamond Ingot",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot"
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.abyssal_stone": "Abyssal Stone",
+  "item.forgero.amber_remnant": "Amber Remnant",
+  "item.forgero.carnotite": "Carnotite",
+  "item.forgero.chorus_tuft": "Chorus Tuft",
+  "item.forgero.crimson_tusk": "Crimson Tusk",
+  "item.forgero.desolate_spread": "Desolate Spread",
+  "item.forgero.dimmed_scale": "Dimmed Scale",
+  "item.forgero.dulse_kelp": "Dulse Kelp",
+  "item.forgero.enflamed_mandible": "Enflamed Mandible",
+  "item.forgero.ethereal_compound": "Ethereal Compound",
+  "item.forgero.ghast_tendril": "Ghast Tendril",
+  "item.forgero.hollowed_chorus_fruit": "Hollowed Chorus Fruit",
+  "item.forgero.irate_tusk": "Irate Tusk",
+  "item.forgero.lustrous_pearl": "Lustrous Pearl",
+  "item.forgero.mastic_resin": "Mastic Resin",
+  "item.forgero.mastic_resin_black": "Black Mastic Resin",
+  "item.forgero.mastic_resin_blue": "Blue Mastic Resin",
+  "item.forgero.mastic_resin_brown": "Brown Mastic Resin",
+  "item.forgero.mastic_resin_cyan": "Cyan Mastic Resin",
+  "item.forgero.mastic_resin_gray": "Gray Mastic Resin",
+  "item.forgero.mastic_resin_green": "Green Mastic Resin",
+  "item.forgero.mastic_resin_light_blue": "Light Blue Mastic Resin",
+  "item.forgero.mastic_resin_light_gray": "Light Gray Mastic Resin",
+  "item.forgero.mastic_resin_lime": "Lime Mastic Resin",
+  "item.forgero.mastic_resin_magenta": "Magenta Mastic Resin",
+  "item.forgero.mastic_resin_orange": "Orange Mastic Resin",
+  "item.forgero.mastic_resin_pink": "Pink Mastic Resin",
+  "item.forgero.mastic_resin_purple": "Purple Mastic Resin",
+  "item.forgero.mastic_resin_red": "Red Mastic Resin",
+  "item.forgero.mastic_resin_white": "White Mastic Resin",
+  "item.forgero.mastic_resin_yellow": "Yellow Mastic Resin",
+  "item.forgero.molten_remnant": "Molten Remnant",
+  "item.forgero.numbing_parchment": "Numbing Parchment",
+  "item.forgero.nut": "Nut",
+  "item.forgero.polar_bear_hide": "Polar Bear Hide",
+  "item.forgero.preliminary_nucleus": "Preliminary Nucleus",
+  "item.forgero.ritualistic_stone": "Ritualistic Stone",
+  "item.forgero.sepia": "Sepia",
+  "item.forgero.sepia_fungus": "Sepia Fungus",
+  "item.forgero.shattered_amber_remnant": "Shattered Amber Remnant",
+  "item.forgero.tusk": "Tusk",
+  "item.forgero.unstable_stone": "Unstable Stone",
+  "item.forgero.vermilion_kelp": "Vermilion Kelp",
+  "item.forgero.vex_wing": "Vex Wing",
+  "item.forgero.void_dust": "Void Dust",
+  "item.forgero.volatile_dust": "Volatile Dust",
+  "item.forgero.wyvern_stone": "Wyvern Stone",
+  "item.forgero.zultanite": "Zultanite"
 }
