Added Dragonloot stuff
Had to give dragon scale another name because of our already existing one.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -243,5 +243,6 @@
   "item.forgero.netherite_gold_ingot": "Netherite-Gold Ingot",
   "item.forgero.netherite_emerald_ingot": "Netherite-Emerald Ingot",
   "item.forgero.netherite_diamond_ingot": "Netherite-Diamond Ingot",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot"
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.dragon_scale_2": "Dragon Scale"
 }
