--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -180,6 +180,29 @@
   "item.forgero.cedar": "Cedar",
   "item.forgero.larch": "Larch",
   "item.forgero.saxaul": "Saxaul",
+  "item.forgero.synthetic_redstone": "Synthetic Redstone Crystal",
+  "item.forgero.sap": "Sap",
+  "item.forgero.rubber": "Rubber",
+  "item.forgero.carbon_fiber": "Carbon Fiber",
+  "item.forgero.carbon_mesh": "Carbon Mesh",
+  "item.forgero.zinc": "Zinc",
+  "item.forgero.refined_iron": "Refined Iron",
+  "item.forgero.lead": "Lead",
+  "item.forgero.brass": "Brass",
+  "item.forgero.advanced_alloy": "Advanced Alloy",
+  "item.forgero.electrum": "Electrum",
+  "item.forgero.aluminium": "Aluminium",
+  "item.forgero.chromium": "Chromium",
+  "item.forgero.iridium": "Iridium",
+  "item.forgero.tungsten": "Tungsten",
+  "item.forgero.tungstensteel": "Tungstensteel",
+  "item.forgero.hot_tungstensteel": "Hot Tungstensteel",
+  "item.forgero.ruby": "Ruby",
+  "item.forgero.sapphire": "Sapphire",
+  "item.forgero.peridot": "Peridot",
+  "item.forgero.red_garnet": "Red Garnet",
+  "item.forgero.yellow_garnet": "Yellow Garnet",
+  "item.forgero.rubber_planks": "Rubber",
   "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
   "item.forgero.andesite_alloy": "Andesite Alloy",
   "item.forgero.zinc": "Zinc",
