* Corrected translation file

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -333,7 +333,7 @@
   "item.forgero.tungsten": "Tungsten",
   "item.forgero.blastproof_alloy": "Blastproof Alloy",
   "item.forgero.coke": "Coke",
-  "item.forgero.lignite_coal": "Lignite Coal"
+  "item.forgero.lignite_coal": "Lignite Coal",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.travertin": "Travertin",
   "item.forgero.laterit": "Laterit",
