[Compat]: Lets Do Blooming Nature (#1003)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -333,5 +333,12 @@
   "item.forgero.tungsten": "Tungsten",
   "item.forgero.blastproof_alloy": "Blastproof Alloy",
   "item.forgero.coke": "Coke",
-  "item.forgero.lignite_coal": "Lignite Coal"
+  "item.forgero.lignite_coal": "Lignite Coal",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.travertin": "Travertin",
+  "item.forgero.laterit": "Laterit",
+  "item.forgero.swamp_oak": "Swamp Oak",
+  "item.forgero.swamp_cypress": "Swamp Cypress",
+  "item.forgero.fan_palm": "Fan Palm",
+  "item.forgero.chestnut": "Chestnut"
 }
