[Compat]. Fruitful Fun (#1004)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -340,5 +340,8 @@
   "item.forgero.swamp_oak": "Swamp Oak",
   "item.forgero.swamp_cypress": "Swamp Cypress",
   "item.forgero.fan_palm": "Fan Palm",
-  "item.forgero.chestnut": "Chestnut"
+  "item.forgero.chestnut": "Chestnut",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.citrus": "Citrus",
+  "item.forgero.redlove": "Redlove"
 }
