[Compat]: Letsdo Vinery (#1013)
Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -343,5 +343,7 @@
   "item.forgero.chestnut": "Chestnut",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.citrus": "Citrus",
-  "item.forgero.redlove": "Redlove"
+  "item.forgero.redlove": "Redlove",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.dark_cherry": "Dark Cherry"
 }
