[Compat]: Letsdo Meadow (#1014)
Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -345,5 +345,7 @@
   "item.forgero.citrus": "Citrus",
   "item.forgero.redlove": "Redlove",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
-  "item.forgero.dark_cherry": "Dark Cherry"
+  "item.forgero.dark_cherry": "Dark Cherry",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.cobbled_limestone": "Cobbled Limestone"
 }
