[Compat]: Gardens of the Dead (#1015)
Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -347,5 +347,10 @@
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.dark_cherry": "Dark Cherry",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
-  "item.forgero.cobbled_limestone": "Cobbled Limestone"
+  "item.forgero.cobbled_limestone": "Cobbled Limestone",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.soulblight_fungus": "Soulblight Fungus",
+  "item.forgero.whistlecane": "Whistlecane",
+  "item.forgero.soulblight": "Soulblight",
+  "item.forgero.whistlecane_planks": "Whistlecane"
 }
