--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -352,5 +352,9 @@
   "item.forgero.soulblight_fungus": "Soulblight Fungus",
   "item.forgero.whistlecane": "Whistlecane",
   "item.forgero.soulblight": "Soulblight",
-  "item.forgero.whistlecane_planks": "Whistlecane"
+  "item.forgero.whistlecane_planks": "Whistlecane",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.lush_lily_pad": "Lush Lily Pad",
+  "item.forgero.mossy_oak": "Mossy Oak",
+  "item.forgero.toadstool": "Toadstool"
 }
