--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -356,5 +356,7 @@
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.lush_lily_pad": "Lush Lily Pad",
   "item.forgero.mossy_oak": "Mossy Oak",
-  "item.forgero.toadstool": "Toadstool"
+  "item.forgero.toadstool": "Toadstool",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.dragon_scale_2": "Dragon Scale"
 }
