[Compat]: Create Garnished Additions Compatibility (#1032)
(Another addon to Garnished.) (#999)

- Three materials added. That's it.
- Optional Dependency added.

METAL:
- Nutium Ingot

SOFT_PLANT:
- Ethereal Roots

WOOD:
- Ethereal

Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -358,5 +358,9 @@
   "item.forgero.mossy_oak": "Mossy Oak",
   "item.forgero.toadstool": "Toadstool",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
-  "item.forgero.dragon_scale_2": "Dragon Scale"
+  "item.forgero.dragon_scale_2": "Dragon Scale",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.nutium_ingot": "Nutium Ingot",
+  "item.forgero.ethereal_roots": "Ethereal Roots",
+  "item.forgero.ethereal": "Ethereal"
 }
