* Removed planks prefix from material name

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -343,6 +343,6 @@
   "item.forgero.citrus": "Citrus",
   "item.forgero.redlove": "Redlove",
   "item.forgero.obsidian_stem": "Obsidian Stem",
-  "item.forgero.reinforced_crimson": "Reinforced Crimson Planks",
-  "item.forgero.reinforced_warped": "Reinforced Warped Planks"
+  "item.forgero.reinforced_crimson": "Reinforced Crimson",
+  "item.forgero.reinforced_warped": "Reinforced Warped"
 }
