--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -334,14 +334,12 @@
   "item.forgero.blastproof_alloy": "Blastproof Alloy",
   "item.forgero.coke": "Coke",
   "item.forgero.lignite_coal": "Lignite Coal",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.travertin": "Travertin",
   "item.forgero.laterit": "Laterit",
   "item.forgero.swamp_oak": "Swamp Oak",
   "item.forgero.swamp_cypress": "Swamp Cypress",
   "item.forgero.fan_palm": "Fan Palm",
   "item.forgero.chestnut": "Chestnut",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.citrus": "Citrus",
   "item.forgero.redlove": "Redlove",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
@@ -362,5 +360,9 @@
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.nutium_ingot": "Nutium Ingot",
   "item.forgero.ethereal_roots": "Ethereal Roots",
-  "item.forgero.ethereal": "Ethereal"
+  "item.forgero.ethereal": "Ethereal",
+  "item.forgero.redlove": "Redlove",
+  "item.forgero.obsidian_stem": "Obsidian Stem",
+  "item.forgero.reinforced_crimson": "Reinforced Crimson",
+  "item.forgero.reinforced_warped": "Reinforced Warped"
 }
