* Corrected translated material name

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -367,5 +367,5 @@
   "item.forgero.reinforced_warped": "Reinforced Warped",
   "item.forgero.whistlecane_planks": "Whistlecane",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
-  "item.forgero.hydrargym_ingot": "Hydrargym Ingot"
+  "item.forgero.hydrargym": "Hydrargym"
 }
