[Compat]: Mythic Metals Decorations  (#1016)
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -364,5 +364,8 @@
   "item.forgero.redlove": "Redlove",
   "item.forgero.obsidian_stem": "Obsidian Stem",
   "item.forgero.reinforced_crimson": "Reinforced Crimson",
-  "item.forgero.reinforced_warped": "Reinforced Warped"
+  "item.forgero.reinforced_warped": "Reinforced Warped",
+  "item.forgero.whistlecane_planks": "Whistlecane",
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.hydrargym": "Hydrargym"
 }
