[Galosphere] Assets added.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -171,7 +171,6 @@
   "item.forgero.cobbled_travertine": "Cobbled Travertine",
   "item.forgero.sugi": "Sugi",
   "item.forgero.wisteria": "Wisteria",
-  "item.forgero.maple": "Maple",
   "item.forgero.olive": "Olive",
   "item.forgero.joshua": "Joshua",
   "item.forgero.ghaf": "Ghaf",
@@ -205,8 +204,6 @@
   "item.forgero.rubber_planks": "Rubber",
   "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
   "item.forgero.andesite_alloy": "Andesite Alloy",
-  "item.forgero.zinc": "Zinc",
-  "item.forgero.brass": "Brass",
   "item.forgero.asurine": "Asurine",
   "item.forgero.crimsite": "Crimsite",
   "item.forgero.limestone": "Limestone",
@@ -279,7 +276,6 @@
   "item.forgero.soul_crystal": "Soul Crystal",
   "item.forgero.soul_dust": "Soul Dust",
   "item.forgero.warden_carapace": "Warden Carapace",
-  "item.forgero.coconut": "Coconut",
   "item.forgero.walnut": "Walnut",
   "item.forgero.azalea": "Azalea",
   "item.forgero.flowering_azalea": "Flowering Azalea",
@@ -303,14 +299,11 @@
   "item.forgero.yttrium_dust": "Yttrium Dust",
   "item.forgero.soldering_alloy_dust": "Soldering Alloy Dust",
   "item.forgero.wax": "Wax",
-  "item.forgero.lead": "Lead",
   "item.forgero.antimony": "Antimony",
   "item.forgero.titanium_hot": "Titanium Hot",
-  "item.forgero.electrum": "Electrum",
   "item.forgero.silicon": "Silicon",
   "item.forgero.stainless_steel": "Stainless Steel",
   "item.forgero.stainless_steel_hot": "Stainless Steel Hot",
-  "item.forgero.chromium": "Chromium",
   "item.forgero.chromium_hot": "Chromium Hot",
   "item.forgero.beryllium": "Beryllium",
   "item.forgero.annealed_copper": "Annealed Copper",
@@ -326,11 +319,9 @@
   "item.forgero.platinum_hot": "Platinum Hot",
   "item.forgero.kanthal": "Kanthal",
   "item.forgero.kanthal_hot": "Kanthal Hot",
-  "item.forgero.iridium": "Iridium",
   "item.forgero.cadmium": "Cadmium",
   "item.forgero.superconductor": "Superconductor",
   "item.forgero.superconductor_hot": "Superconductor Hot",
-  "item.forgero.tungsten": "Tungsten",
   "item.forgero.blastproof_alloy": "Blastproof Alloy",
   "item.forgero.coke": "Coke",
   "item.forgero.lignite_coal": "Lignite Coal",
@@ -342,30 +333,25 @@
   "item.forgero.chestnut": "Chestnut",
   "item.forgero.citrus": "Citrus",
   "item.forgero.redlove": "Redlove",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.dark_cherry": "Dark Cherry",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.cobbled_limestone": "Cobbled Limestone",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.soulblight_fungus": "Soulblight Fungus",
   "item.forgero.whistlecane": "Whistlecane",
   "item.forgero.soulblight": "Soulblight",
   "item.forgero.whistlecane_planks": "Whistlecane",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.lush_lily_pad": "Lush Lily Pad",
   "item.forgero.mossy_oak": "Mossy Oak",
   "item.forgero.toadstool": "Toadstool",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.dragon_scale_2": "Dragon Scale",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.nutium_ingot": "Nutium Ingot",
   "item.forgero.ethereal_roots": "Ethereal Roots",
   "item.forgero.ethereal": "Ethereal",
-  "item.forgero.redlove": "Redlove",
   "item.forgero.obsidian_stem": "Obsidian Stem",
   "item.forgero.reinforced_crimson": "Reinforced Crimson",
   "item.forgero.reinforced_warped": "Reinforced Warped",
-  "item.forgero.whistlecane_planks": "Whistlecane",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
-  "item.forgero.hydrargym": "Hydrargym"
+  "item.forgero.hydrargym": "Hydrargym",
+  "item.forgero.bowl_lichen": "Bowl Lichen",
+  "item.forgero.cured_membrane": "Cured Membrane",
+  "item.forgero.allurite_shard": "Allurite Shard",
+  "item.forgero.lumiere_shard": "Lumiere Shard"
 }
