--- a/fabric/modules/smithing/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/smithing/src/main/resources/assets/forgero/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemgroup.smithing": "Smithing",
   "block.forgero.smithing_anvil": "Smithing Anvil",
   "block.forgero.bloomery": "Bloomery",
+  "block.forgero.mold": "Mold",
   "container.forgero.bloomery": "Bloomery",
   "item.forgero.crucible": "Crucible",
   "item.forgero.clay_crucible": "Clay Crucible",
