--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -141,7 +141,6 @@
   "item.forgero.ironwood": "Ironwood",
   "item.forgero.jacaranda": "Jacaranda",
   "item.forgero.mahogany": "Mahogany",
-  "item.forgero.maple": "Maple",
   "item.forgero.palm": "Palm",
   "item.forgero.pine": "Pine",
   "item.forgero.rainbow_eucalyptus": "Rainbow Eucalyptus",
@@ -171,6 +170,7 @@
   "item.forgero.cobbled_travertine": "Cobbled Travertine",
   "item.forgero.sugi": "Sugi",
   "item.forgero.wisteria": "Wisteria",
+  "item.forgero.maple": "Maple",
   "item.forgero.olive": "Olive",
   "item.forgero.joshua": "Joshua",
   "item.forgero.ghaf": "Ghaf",
@@ -387,5 +387,17 @@
   "item.forgero.flowering_lily_pad": "Flowering Lily Pad",
   "item.forgero.kapok_vines": "Kapok Vines",
   "item.forgero.spanish_moss": "Spanish Moss",
-  "item.forgero.glistering_ivy": "Glistering Ivy"
+  "item.forgero.glistering_ivy": "Glistering Ivy",
+  "item.forgero.button_mushroom": "Button Mushroom",
+  "item.forgero.crimini": "Crimini",
+  "item.forgero.portabella": "Portabella",
+  "item.forgero.inkcap_mushroom": "Inkcap Mushroom",
+  "item.forgero.white_inkcap_mushroom": "Pale Inkcap Mushroom",
+  "item.forgero.phosphor_fungus": "Phosphor Fungus",
+  "item.forgero.mushgloom": "Mushgloom",
+  "item.forgero.milly_bubcap": "Milly Bubcap",
+  "item.forgero.raw_magnetite": "Magnetite",
+  "item.forgero.cinnabar": "Cinnabar",
+  "item.forgero.tangle_roots": "Tangle Roots",
+  "item.forgero.nephrite": "Nephrite"
 }
