--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -406,7 +406,6 @@
   "item.forgero.crystal_block": "Crystal",
   "item.forgero.void_crystal_block": "Void Crystal",
   "item.forgero.oblivine": "Oblivine",
-  "item.forgero.pream": "Pream"
+  "item.forgero.pream": "Pream",
+  "item.forgero.enderite": "Enderite"
 }
-
-
