--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -407,5 +407,11 @@
   "item.forgero.void_crystal_block": "Void Crystal",
   "item.forgero.oblivine": "Oblivine",
   "item.forgero.pream": "Pream",
-  "item.forgero.enderite": "Enderite"
+  "item.forgero.enderite": "Enderite",
+  "item.forgero.bowl_lichen": "Bowl Lichen",
+  "item.forgero.cured_membrane": "Cured Membrane",
+  "item.forgero.allurite_shard": "Allurite Shard",
+  "item.forgero.lumiere_shard": "Lumiere Shard"
 }
+
+
