--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -411,7 +411,7 @@
   "item.forgero.bowl_lichen": "Bowl Lichen",
   "item.forgero.cured_membrane": "Cured Membrane",
   "item.forgero.allurite_shard": "Allurite Shard",
-  "item.forgero.lumiere_shard": "Lumiere Shard"
+  "item.forgero.lumiere_shard": "Lumiere Shard",
+  "item.forgero.feldspar": "Feldspar",
+  "item.forgero.hoary": "Hoary"
 }
-
-
