--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -413,5 +413,13 @@
   "item.forgero.allurite_shard": "Allurite Shard",
   "item.forgero.lumiere_shard": "Lumiere Shard",
   "item.forgero.feldspar": "Feldspar",
-  "item.forgero.hoary": "Hoary"
+  "item.forgero.hoary": "Hoary",
+  "item.forgero.balloon_mushroom_small": "Balloon Mushroom Small",
+  "item.forgero.tall_balloon_mushroom": "Tall Balloon Mushroom",
+  "item.forgero.gravilite": "Gravilite",
+  "item.forgero.eden_vine": "Eden Vine",
+  "item.forgero.auritis": "Auritis",
+  "item.forgero.balloon_mushroom": "Balloon Mushroom",
+  "item.forgero.pulse_tree": "Pulse Tree",
+  "item.forgero.brain_tree": "Brain Tree"
 }
