--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -350,6 +350,8 @@
   "item.forgero.whistlecane_planks": "Whistlecane",
   "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
   "item.forgero.hydrargym": "Hydrargym",
+  "item.forgero.elder_gear_golem_heart": "Elder Gear Golem Heart",
+  "item.forgero.bog_iron": "Bog Iron",
   "item.forgero.aberration_limb": "Aberration's Limb",
   "item.forgero.aberration_heart": "Aberration's Heart",
   "item.forgero.etyr": "Etyr",
