Fixed some leftovers & Added alot of bettercombat integration

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.forgero.agile_sword_guard": "Agile Guard",
   "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
   "item.forgero.katana_blade": "Katana Blade",
+  "item.forgero.katana": "Katana",
   "item.forgero.broadsword_blade": "Broadsword Blade",
   "item.forgero.shortsword_blade": "Shortsword Blade",
   "item.forgero.refined_sword_blade": "Refined Sword Blade",
